fix overflow

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     overflow-y: 0;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 body::-webkit-scrollbar {
@@ -31,7 +31,7 @@ nav{
     background-color: #ffffff;
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 100vw;
     z-index: 1000;
     padding: 10px 0 5px 0;
 }
